Version ?, released May ?, 2017

Adds a minimize command that can be run from the command line to simplify
failing tests to make it easier to understand the test sequence.

Fixes a problem in progress reporting where the wrong count was being used for
error-revealing sequences


Version 3.1.5, released April 28, 2017

Fixes a bug where a call to a method with a type variable return type should
result in a ClassCastException does not throw the exception, but instead leads
to a later failure when invoking a class member.

Fixes and improves error handling.


Version 3.1.4, released April 11, 2017

Fixes a bug uncovered in obscure cases when package visibility is used.


Version 3.1.3, released April 11, 2017

Fixes a bug where package visibility checks fail to work correctly.


Version 3.1.2, released March 21, 2017

The exercised-class jar now includes dependencies.


Version 3.1.1, released March 15, 2017

Fix to make the numbering of test classes consistent with previous versions.


Version 3.1.0, released March 14, 2017

Filters generated test sequences that don't compile. There are a small number of
known input cases for which Randoop produces uncompilable tests. This check will
prevent these tests from being created, but has a runtime penalty. In cases where
generating uncompilable tests is not a concern this check can be disabled by
setting --check-compilable=false.

Adds new command-line option --sof-exception that controls how Randoop
classifies a test that throws a StackOverflowError exception.


Version 3.0.10, released March 6, 2017

Avoids Randoop failures due to issues that arise during test generation.


Version 3.0.9, released February 22, 2017

New command-line option --stop-on-error-test stops test generation once
an error-revealing test is generated.  This is useful during cycles of
fixing errors discovered by Randoop.

Classpath error message explains why a class is not found.

Fixes