@@ -1,7 +1,10 @@
 Version ?, released May ?, 2017
 
 Adds a minimize command that can be run from the command line to simplify
-failing tests to make it easier to understand the test sequence.
+failing tests to make it easier to understand the test sequence. Automatically
+minimizes the error-revealing test generated when using the --stop-on-error-test.
+Adds flag --minimize-error-tests to minimize generated error tests. (Thanks to
+Waylon Huang for implementing and integrating the minimizer!)
 
 Fixes a problem in progress reporting where the wrong count was being used for
 error-revealing sequences
